<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backgroud_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2_alpha_70">

    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/color_setting_white">

        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/share_close_selector" />

        <RelativeLayout
            android:id="@+id/recommend_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/back_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:id="@+id/share_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sina_weibo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableTop="@drawable/share_sina_weibo_selector"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/share_sina"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/weixin_friend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableTop="@drawable/share_weixin_friend_selector"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/share_weixin"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/weixin_circle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableTop="@drawable/share_weixin_circle_selector"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/share_wx_circle"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/qq_zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableTop="@drawable/share_qq_zone_selector"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/share_qzone"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/qq_friend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableTop="@drawable/share_qq_friend_selector"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/share_qq"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/share_copy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="6dp"
                    android:drawableTop="@drawable/share_copy_selector"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/share_link"
                    android:textSize="11sp" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>